# new-uuid-formats

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  config.h.in
include/: random.h  uuid67.h  uuid67format.h
src/: main.c  random.c  uuid67.c  uuid67format.c
src/linux-random/: random.c
src/pcg32-random/: random.c
